<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.axisallies.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textTitle"
        android:id="@+id/textViewMainTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textViewMainInstuction"
        android:layout_below="@+id/textViewMainTitle"
        android:layout_alignEnd="@+id/textViewMainTitle"
        android:layout_alignStart="@+id/textViewMainTitle"
        android:text="@string/textMainInstruction" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/vr"
        android:layout_below="@+id/textViewMainInstuction"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btRegularOnLand"
            android:id="@+id/btRegularOnLand"
            android:layout_marginTop="16dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btRegularOnSea"
            android:id="@+id/btRegularOnSea"
            android:layout_marginTop="16dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btAmphibious"
            android:id="@+id/btAmphibious"
            android:layout_marginTop="19dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btBombing"
            android:id="@+id/btBombing"
            android:layout_marginTop="17dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btConvoy"
            android:id="@+id/btConvoy"
            android:layout_marginTop="21dp"
            android:layout_below="@+id/btBombing"
            android:layout_alignStart="@+id/btBombing"
            android:layout_alignEnd="@+id/btBombing" />
    </LinearLayout>

</RelativeLayout>
