<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.axisallies.ConvoyActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/convoy_title"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/btAmphibious"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:text="@string/convoy_instruction" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btAmphibious"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:rowCount="4"
            android:columnCount="3"
            android:layout_weight="0.99">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textTwoDices"
                android:id="@+id/textView5"
                android:layout_row="0"
                android:layout_column="0"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textOneDice"
                android:id="@+id/textView4"
                android:layout_row="2"
                android:layout_column="0"
                android:textColor="#000000" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/numTwo"
                android:layout_row="1"
                android:layout_column="0"
                android:text="0" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/numOne"
                android:layout_row="3"
                android:layout_column="0"
                android:text="0" />

        </GridLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btConvoyCalculation"
            android:id="@+id/btConvoyCalculate"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</RelativeLayout>
